# DBS-Hack-14

./: .gitignore  README.md
backend/: config.py  pyproject.toml  run.py  temp_api_logic.py
backend/app/: __init__.py  extensions.py  from flask import request, jsonify, date.py  jwt.py  routes.py  temp_routes_clement_test.py
backend/app/db/: manager.py  migrate.py  techtrek2025.sql
backend/app/models/: db_models.py  requests.py
backend/backend/: __init__.py  jwt.py  routes.py
backend/backend/db/: migrate.py
backend/backend/models/: db_models.py
backend/main/: routes.py
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  Layout.jsx
frontend/src/api/: company.js  outstandingRequests.js
frontend/src/components/: CreateRequest.jsx  EditRequest.jsx  LoginPage.jsx  OutstandingRequestsTable.jsx  RequestsTable.jsx
frontend/src/components/Navbar/: Navbar.jsx  Navbar.module.css
frontend/src/components/RequestsReceivedTable/: RequestsReceivedTable.jsx
frontend/src/contexts/: company.context.jsx
frontend/src/pages/: Home.jsx  LoginPage.jsx  Requests.jsx
frontend/src/utils/: stringFormatting.js
